img/depl/multitool-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      shareProcessNamespace: true
      containers:
        - name: network-multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
              name: multi-port
