img/depl/svc-multitool.yaml
apiVersion: v1
kind: Service
metadata:
  name: multitool-svc
spec:
  selector:
    app: multitool
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
      targetPort: multi-port
